# gitsummary

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  commits-and-releases.json  my-activity.json  pyproject.toml  test-output.json
.github/workflows/: auto-add-to-project.yml  ci.yml  release.yml
docs/: PRD-GitHub-API-Integration.md  README.md  personas.md
src/git_summary/: __init__.py  adaptive_discovery.py  cli.py  config.py  fetchers.py  github_client.py  intelligence_guided.py  library.py  models.py  multi_source_discovery.py  my-dev-work.json  processors.py  progress.py  user_profiling.py
src/git_summary/ai/: __init__.py  client.py  context.py  orchestrator.py  personas.py
src/git_summary/ai/personas/: data_analyst.yaml  marketing_guru.yaml  product_manager.yaml  qa_engineer.yaml  team_lead.yaml  technical_analyst.yaml  technical_recruiter.yaml
src/git_summary/ai_models/: __init__.py
src/git_summary/ai_models/built_in/: anthropic.yaml  google.yaml  groq.yaml  local.yaml  openai.yaml
tests/: test_ai_cli.py  test_ai_client.py  test_ai_context.py  test_ai_orchestrator.py  test_ai_personas.py  test_cli.py  test_cli_adaptive.py  test_config_callbacks.py  test_fetchers.py  test_github_client.py  test_library_api.py  test_models.py  test_processors.py  test_progress.py  test_public_api.py
tests/fixtures/: __init__.py  github_responses.py
tests/integration/: __init__.py  test_analysis_workflows.py
tests/unit/: __init__.py  test_automation_detector.py  test_scoring_algorithms.py
